--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_main.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:fitsSystemWindows="true"
@@ -17,22 +18,23 @@
             android:layout_width="wrap_content"
             android:layout_height="72dp"
             android:layout_marginBottom="24dp"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="center_horizontal"
+            tools:ignore="ContentDescription" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/spinner_gaseras"
             android:layout_weight="0"
-            android:textSize="25dp"
-            android:textColor="@color/colorTextLogin"/>
+            android:text="@string/spinner_gaseras"
+            android:textColor="@color/colorTextLogin"
+            android:textSize="24sp" />
 
         <Spinner
             android:id="@+id/spinner_gasera"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0"
-            android:textSize="25dp"
+            android:textSize="25sp"
             android:paddingBottom="10dp"
             android:textColor="@color/colorTextLogin"/>
 
@@ -40,50 +42,58 @@
             android:id="@+id/input_layout_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <EditText android:id="@+id/input_username"
+
+            <EditText
+                android:id="@+id/input_username"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="25dp"
-                android:paddingBottom="15dp"
-                android:inputType="text"
-                android:hint="@string/login_hint_username"
                 android:layout_weight="0"
+                android:hint="@string/login_hint_username"
+                android:inputType="text"
+                android:paddingBottom="15dp"
+                android:textColor="@color/colorTextLogin"
                 android:textColorHint="@color/colorTextLogin"
-                android:textColor="@color/colorTextLogin"/>
+                android:textSize="18sp"
+                tools:ignore="Autofill" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/input_layout_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <EditText android:id="@+id/input_password"
+
+            <EditText
+                android:id="@+id/input_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="25dp"
-                android:paddingBottom="15dp"
-                android:inputType="textPassword"
-                android:hint="@string/login_hint_password"
                 android:layout_weight="0"
+                android:hint="@string/login_hint_password"
+                android:inputType="textPassword"
+                android:paddingBottom="15dp"
+                android:textColor="@color/colorTextLogin"
                 android:textColorHint="@color/colorTextLogin"
-                android:textColor="@color/colorTextLogin"/>
+                android:textSize="18sp"
+                tools:ignore="Autofill" />
         </android.support.design.widget.TextInputLayout>
 
 
         <LinearLayout
             android:id="@+id/layout_iniciar"
             android:layout_width="match_parent"
-            android:layout_height="0dip"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="15sp"
             android:layout_weight="1"
             android:gravity="center|bottom"
-            android:orientation="vertical" >
+            android:orientation="vertical">
+
             <Button
                 android:id="@+id/login_button"
                 android:layout_width="match_parent"
-                android:layout_height="70dp"
+                android:layout_height="wrap_content"
                 android:background="@color/colorButtonLogin"
                 android:text="@string/login_button"
                 android:textColor="@color/colorTextButtonLogin"
-                android:textSize="25dp" />
+                android:textSize="24sp" />
 
         </LinearLayout>
 
