--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/RequisicionAutorizacion.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/RequisicionAutorizacion.cshtml
@@ -7,15 +7,7 @@
     <title>RequisicionAutorizacion</title>
     <link rel="stylesheet" href="~/assets/plugins/bootstrap-colorpicker/css/bootstrap-colorpicker.css" />
     <link href="~/assets/plugins/bootstrap-select/css/bootstrap-select.css" rel="stylesheet" />
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $("#btnFinalizar").click(function () {
-                var form = $(this).parent("form");
-                form.attr('action', '<%= Url.RouteUrl(new { Controller = "Requisicion", Action = "Autorizacion" }) %>');
-                form.attr('method', 'post');
-            });
-        });
-    </script>
+    <script src="~/Scripts/js/RequisicionAutorizacionJS.js" ></script>
 </head>
 <body>
     @using (Html.BeginForm("Autorizacion", "Requisicion", FormMethod.Post))
@@ -124,7 +116,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="row clearfix">
+                                    <div class="row clearfix blockquote blockquote-info btn-round ">
                                         <div class="table-responsive">
                                             <table class="table table-hover">
                                                 <thead>
